--- a/index.html
+++ b/index.html
@@ -1,14 +1,62 @@
-<html lang="pl">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sprawdź PESEL</title>
+    <title>Document</title>
 </head>
-<body>
-    <h1>Sprawdź PESEL</h1>
-    <p id="message">Sprawdź PESEL</p>
+    <body>
+        <script>
+           function checkPesel() {
+             const pesel = prompt('Podaj pesel');
+    
+   
+             if (pesel.length !== 11 || !/^\d+$/.test(pesel)) {
+                    alert("Błąd! PESEL musi mieć 11 cyfr.");
+                    return;
+              }
 
-    <!-- Dołączanie pliku JavaScript -->
-    <script src="pesel.js"></script>
-</body>
+              const monthNames = [
+                  "styczeń", "luty", "marzec", "kwiecień", "maj", "czerwiec",
+                  "lipiec", "sierpień", "wrzesień", "październik", "listopad", "grudzień"
+             ];
+
+             const yearDate = pesel.substring(0, 2);
+             const monthDate = pesel.substring(2, 4);
+             const dayDate = pesel.substring(4, 6);
+             const genderIdentificator = parseInt(pesel.charAt(9));
+
+             let year = parseInt(yearDate);
+                let month = parseInt(monthDate);
+                let day = parseInt(dayDate);
+
+
+             let gender = "";
+             if (genderIdentificator % 2 === 0) {
+                 gender = "K";  
+              } else {
+                  gender = "M";  
+              }
+
+
+             if (month > 12) {
+                   month -= 20; 
+                  year += 2000; 
+             } else {
+                 year += 1900; 
+             }
+
+
+             const monthName = monthNames[month - 1];
+
+             document.write('Rok: ', year, "<br>",
+                               'Miesiąc: ', monthName, "<br>",
+                               'Dzień: ', day, "<br>",
+                               'Płeć: ', gender);
+            }
+        </script>
+        <button onclick="checkPesel()">sprawdz </button>
+    </body>
 </html>
+ 
+ 
